General update to the credits

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,13 @@ name = "scapy"
 dynamic = [ "version", "readme" ]
 authors = [
     { name="Philippe BIONDI" },
+    { name="Gabriel POTTER" },
 ]
 maintainers = [
-    { name="Pierre LALET" },
     { name="Gabriel POTTER" },
-    { name="Guillaume VALADON" },
     { name="Nils WEISS" },
+    { name="Guillaume VALADON" },
+    { name="Pierre LALET" },
 ]
 license = { text="GPL-2.0-only" }
 requires-python = ">=3.7, <4"
