--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = [ "setuptools>=62.0.0" ]
+requires = [ "setuptools>=77.0.0" ]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -15,8 +15,8 @@ maintainers = [
     { name="Guillaume VALADON" },
     { name="Nils WEISS" },
 ]
-license = { text="GPL-2.0-only" }
-requires-python = ">=3.7, <4"
+license = "GPL-2.0-only"
+requires-python = ">=3.9, <4"
 description = "Scapy: interactive packet manipulation tool"
 keywords = [ "network" ]
 classifiers = [
@@ -27,11 +27,8 @@ classifiers = [
     "Intended Audience :: Science/Research",
     "Intended Audience :: System Administrators",
     "Intended Audience :: Telecommunications Industry",
-    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
