--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ maintainers = [
     { name="Guillaume VALADON" },
     { name="Nils WEISS" },
 ]
-license = { text="GPL-2.0-only" }
+license = "GPL-2.0-only"
 requires-python = ">=3.7, <4"
 description = "Scapy: interactive packet manipulation tool"
 keywords = [ "network" ]
@@ -27,7 +27,6 @@ classifiers = [
     "Intended Audience :: Science/Research",
     "Intended Audience :: System Administrators",
     "Intended Audience :: Telecommunications Industry",
-    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.7",
